# g2o-robust

./: CMakeLists.txt  README  README.md
MaxMixture/: CMakeLists.txt  LICENSE  README.md
MaxMixture/include/: edge_max_mixture.hpp  max_mixture_interface.h  max_mixture_manager.h
MaxMixture/src/: edge_se3_mixture.cpp  max_mixture_manager.cpp  types_max_mixture.cpp  types_max_mixture_new.cpp
MaxMixtureOriginal/: CMakeLists.txt  LICENSE  README.md
MaxMixtureOriginal/src/: edge_se2_mixture.cpp  edge_se2_pointxy_mixture.cpp  types_max_mixture_original.cpp
RobustifiedEdges/: CMakeLists.txt  LICENSE  README.md
RobustifiedEdges/include/: edge_robustified.hpp
RobustifiedEdges/src/: types_robust_edges.cpp
SwitchableConstraints/: CMakeLists.txt  README.md
SwitchableConstraints/include/: edge_se3Switchable.h  types_switchable_constraints.h  vertex_switchLinear.h
SwitchableConstraints/src/: edge_se2Switchable.cpp  edge_se3Switchable.cpp  edge_switchPrior.cpp  types_switchable_constraints.cpp  vertex_switchLinear.cpp
cmake_modules/: FindG2O.cmake
examples/: robustified_se2.g2o  robustified_se3.g2o
